# mighty-quest

./: .gitignore  CMakeLists.txt  LICENSE  LaunchMQEL_Online.bat  README.md
.github/workflows/: build.yml
Source/: Appmain.cpp  Stdinclude.hpp
Source/Auth/: AuthManager.hpp
Source/Backend/: Backend.hpp  Hero.cpp  Notifications.cpp  PvPCastle.cpp  Questing.cpp  Wallet.cpp
Source/Common/: Enumerations.hpp  Message.hpp  Structs.hpp
Source/Configuration/: Defines.hpp  Macros.hpp  ServerConfig.hpp
Source/Frontend/Servers/: Gameserver.cpp  Servers.hpp
Source/Frontend/Servers/Interfaces/: IDatagramserver.hpp  IHTTPServer.hpp  ISSLServer.hpp  IServer.hpp  IStreamserver.hpp
Source/Frontend/Services/: Services.hpp
Source/Online/: OnlineServices.hpp  SupabaseClient.hpp
Source/Utility/: Bytebuffer.hpp  Filesystem.hpp  Hooking.hpp  Logfile.hpp  Memprotect.hpp  PackageFS.hpp  Patternscan.cpp  Patternscan.hpp  Taskrunner.hpp  Variadicstring.hpp
