cmake_minimum_required(VERSION 3.1)
project(MQELOnline_cpp)
set(CMAKE_CXX_STANDARD 17)
enable_language(ASM_MASM)
set(EXECUTABLE_OUTPUT_PATH ${MQELOnline_cpp_SOURCE_DIR}/Bin)
set(LIBRARY_OUTPUT_PATH ${MQELOnline_cpp_SOURCE_DIR}/Bin)
file(GLOB_RECURSE SOURCES "Source/*.cpp")
file(GLOB_RECURSE HEADERS "Source/*.hpp" "Source/*.h")
add_library(MQELOnline SHARED ${SOURCES} ${HEADERS})
set_target_properties(MQELOnline PROPERTIES PREFIX "")
if(${CMAKE_SIZEOF_VOID_P} EQUAL 4)
    set_target_properties(MQELOnline PROPERTIES SUFFIX ".LN32")
else()
    set_target_properties(MQELOnline PROPERTIES SUFFIX ".LN64")
endif()
target_link_libraries(MQELOnline ws2_32 winhttp)
